php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #18974 invalid statement in fsock.c
Submitted: 2002-08-19 17:51 UTC Modified: 2002-08-20 07:14 UTC
From: long at kestrel dot cc dot ukans dot edu Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4CVS-2002-08-19 OS: Compaq Tru64 4.0F PK3
Private report: No CVE-ID: None
 [2002-08-19 17:51 UTC] long at kestrel dot cc dot ukans dot edu
When I configure php4-200208191200 using:

 env CFLAGS=-std1 CXXFLAGS=-std1 CC=cc CXX=cxx ./configure --with-openssl --enable-bcmath --with-ndbm --with-dbm --enable-dbase --enable-filepro --enable-ftp --with-gd --with-ttf --with-java=/usr/opt/java130 --with-mysql --with-oracle --enable-shmop --enable-sockets --enable-sysvsem --enable-sysvshm --enable-wddx --enable-dba=shared --enable-calendar --enable-exif --enable-discard-path --enable-dbx --enable-ctype --with-hyperwave --enable-mailparse --enable-mbstring --enable-mbstr-enc-trans --enable-memory-limit


I then get this while building:

cc  -Iext/standard/ -I/homeb/long/src/php4-200208191200/ext/standard/ -DPHP_ATOM_INC -I/homeb/long/src/php4-200208191200/include -I/homeb/long/src/php4-200208191200/main -I/homeb/long/src/php4-200208191200 -I/homeb/long/src/php4-200208191200/Zend -I/usr/local/ssl/include -I/usr/local/include -I/home/oracle/u01/app/oracle/product/8.0.5/rdbms/demo -I/home/oracle/u01/app/oracle/product/8.0.5/network/public -I/home/oracle/u01/app/oracle/product/8.0.5/plsql/public -I/homeb/long/src/php4-200208191200/ext/xml/expat  -I/homeb/long/src/php4-200208191200/TSRM  -std1  -c /homeb/long/src/php4-200208191200/ext/standard/fsock.c -o ext/standard/fsock.o  && echo > ext/standard/fsock.lo
cc: Error: /homeb/long/src/php4-200208191200/ext/standard/fsock.c, line 221: Invalid statement. (badstmt)

Apparently it doesn't like the empty default: clause in the switch statement there because it builds fine if I just stick a break in there.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-08-20 07:14 UTC] derick@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2025 The PHP Group
All rights reserved.
Last updated: Thu Jul 03 07:01:35 2025 UTC