- Fix for the compiler on Compaq Tru64 4.0F PK3 (bug #18974)